UI Fixes on mobile

--- a/TraceRoute/wwwroot/css/site.css
+++ b/TraceRoute/wwwroot/css/site.css
@@ -30,6 +30,9 @@
     .mobile-max-50 {
         max-height: 15vh;
     }
+    .mobile-max-50 table {
+        margin-bottom: 60px!important;
+    }
     .mobile-50 {
         min-height: 45vh;
     }
